<resources>
    <string name="app_name" translatable="false">ft_hangouts</string>

    <string name="permission_call">Call phone permission needed</string>
    <string name="permission_sms">SMS permission needed</string>

    <string name="first_name">First_name</string>
    <string name="last_name">Last_name</string>
    <string name="number">Phone number</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="note">Note</string>

    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="delect">Delect</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>

    <string name="header">Header</string>
    <string name="error_exist">Contact with this number already exists!</string>
    <string name="error_number">"Phone number error! "</string>

</resources>