<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/fragment_contact_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/c_person"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ic_person"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_person"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/first_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_person" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/last_name"
                    app:layout_constraintTop_toBottomOf="@id/first_name"
                    app:layout_constraintEnd_toEndOf="@id/first_name"
                    app:layout_constraintStart_toStartOf="@id/first_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/c_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/c_person">

                <ImageView
                    android:id="@+id/ic_phone"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_phone"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/number"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:maxLines="1"
                    android:hint="@string/number"
                    android:ems="10"
                    android:inputType="numberSigned"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_phone"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/c_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/c_number">

                <ImageView
                    android:id="@+id/ic_email"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_email"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:maxLines="1"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/c_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/c_email">

                <ImageView
                    android:id="@+id/ic_address"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_location"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_address" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/c_note"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/c_address"
                >

                <ImageView
                    android:id="@+id/ic_note"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_note"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/note"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/note"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_note" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view_mid_separation"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/b_cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view_mid_separation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c_note" />

            <Button
                android:id="@+id/b_save"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="@+id/b_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_mid_separation"
                app:layout_constraintTop_toTopOf="@+id/b_cancel"
                app:layout_constraintWidth_percent="0.3" />

            <TextView
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/red"

                app:layout_constraintBottom_toTopOf="@+id/b_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/c_note" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>